--- a/src/main/webapp/WEB-INF/templates/public/order.html
+++ b/src/main/webapp/WEB-INF/templates/public/order.html
@@ -331,7 +331,7 @@ Category Product</span>
           <td th:text="${order.description}" ></td>
           <td th:if="${order.status == 0}">Cancelled</td>
           <td th:if="${order.status == 1}">Processing</td>
-          <td th:if="${order.status == 2}">Delivery</td>
+          <td th:if="${order.status == 2}">Delivery in progress</td>
           <td th:if="${order.status == 3}">Delivered</td>
           <td th:if="${order.isPayment == 0}">UnPaid</td>
           <td th:if="${order.isPayment == 1}">Paid</td>
