--- a/src/main/webapp/WEB-INF/templates/admin/fragments.html
+++ b/src/main/webapp/WEB-INF/templates/admin/fragments.html
@@ -69,6 +69,10 @@
                         <div class="sb-nav-link-icon"><i class="fas fa-table"></i></div>
                         Order
                     </a>
+                    <a class="nav-link" href="/admin/comment">
+                        <div class="sb-nav-link-icon"><i class="fas fa-table"></i></div>
+                        Feedback
+                    </a>
                     <a class="nav-link collapsed" href="#" data-bs-toggle="collapse"
                        data-bs-target="#collapseLayouts" aria-expanded="false" aria-controls="collapseLayouts">
                         <div class="sb-nav-link-icon"><i class="fas fa-columns"></i></div>
